[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game/Levels/Pseudocode/Cap2Theory.gd" type="Script" id=1]
[ext_resource path="res://Game/Pets/AnyPet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Levels/TheoryTemplate.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Levels/Pseudocode/Images/UML.jpg" type="Texture" id=4]

[sub_resource type="Animation" id=1]

resource_name = "anim1"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.7, 0.7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnyPet:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -1440.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnyPet:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 624, 400 ), Vector2( 624, 400 ) ]
}

[sub_resource type="Animation" id=6]

resource_name = "anim10"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 112, 544 ), Vector2( 32, 528 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnyPet:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -359.999, -359.999 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnyPet:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.7 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UML:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 1616, 336 ), Vector2( 976, 320 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UML:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("UML:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]

resource_name = "anim12"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("UML:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 976, 320 ), Vector2( 1531, -234.107 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UML:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UML:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.276, 0.21374 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnyPet:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 528 ), Vector2( 624, 384 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnyPet:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -359.999, -359.999 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnyPet:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.7 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "anim2"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 624, 400 ), Vector2( 1296, 400 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnyPet:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -89.9999 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnyPet:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.7 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "anim3"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1296, 400 ), Vector2( 1280, 128 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnyPet:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -89.9999, -150.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnyPet:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.7 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "anim5"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1280, 128 ), Vector2( 640, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnyPet:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -180.0, -180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnyPet:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.7 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "anim6"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 64 ), Vector2( 48, 128 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnyPet:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -180.0, -270.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnyPet:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.7 ) ]
}

[sub_resource type="Animation" id=8]

resource_name = "anim8"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 48, 128 ), Vector2( 112, 544 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnyPet:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -270.0, -359.999 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnyPet:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.7 ) ]
}

[node name="Cap2Theory" type="Node" index="0"]
script = ExtResource( 1 )

[node name="AnyPet" parent="." index="0" instance=ExtResource( 2 )]
editor/display_folded = true
position = Vector2( 624, 384 )
rotation = -6.28318
scale = Vector2( 0.7, 0.7 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="TheoryTemplate" parent="." index="1" instance=ExtResource( 3 )]

[node name="Bottom" parent="TheoryTemplate" index="2"]
editor/display_folded = true

[node name="Anim" type="AnimationPlayer" parent="." index="2"]
root_node = NodePath("..")
autoplay = "anim1"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/anim1 = SubResource( 1 )
anims/anim10 = SubResource( 6 )
anims/anim12 = SubResource( 7 )
anims/anim2 = SubResource( 2 )
anims/anim3 = SubResource( 3 )
anims/anim5 = SubResource( 4 )
anims/anim6 = SubResource( 5 )
anims/anim8 = SubResource( 8 )
blend_times = [  ]

[node name="UML" type="Sprite" parent="." index="3"]
position = Vector2( 1531, -234.107 )
scale = Vector2( 0.276, 0.21374 )
texture = ExtResource( 4 )

[connection signal="changed_text" from="TheoryTemplate/RPGDialog" to="." method="_on_RPGDialog_changed_text"]
[connection signal="changed_text" from="TheoryTemplate/RPGDialog" to="TheoryTemplate" method="_on_RPGDialog_changed_text"]
[connection signal="animation_finished" from="TheoryTemplate/Anim" to="." method="_on_Anim_animation_finished"]

[editable path="AnyPet"]

[editable path="TheoryTemplate"]
